feat(server): * add comments to explain situation of passport and add flash notice in app.js and login.pug

--- a/views/login.pug
+++ b/views/login.pug
@@ -9,3 +9,5 @@ body
         input(type="password", id="password", name="password", required)
         div
         button(type="submit") Se connecter
+    if messages.error
+        p.text-red-500.mt-4= messages.error
